testdata/baselines/reference/submodule/conformance/jsDeclarationsExportSubAssignments(target=es2015).errors.txt
cls.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== cls.js (1 errors) ====
    const Strings = {
        a: "A",
        b: "B"
    };
    class Foo {}
    module.exports = Foo;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    module.exports.Strings = Strings;